rasppi/iptables.rules
# Generated by iptables-save v1.4.21 on Tue Apr  4 19:29:40 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [287:23000]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

#deluge ports
#-A INPUT -p tcp -m tcp --dport 55798 -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 55799 -j ACCEPT
#-A INPUT -p udp -m udp --dport 55798 -j ACCEPT
#-A INPUT -p udp -m udp --dport 55799 -j ACCEPT
#-A INPUT -p tcp --dport 58846 -s 192.168.1.1/24 -j ACCEPT
#-A INPUT -p tcp --dport 8112 -s 192.168.1.1/24 -j ACCEPT
#-A INPUT -p udp --dport 8112 -s 192.168.1.1/24 -j ACCEPT

#openvpn
-A INPUT -p udp -m udp --dport 1194 -j ACCEPT
#ipp
#-A INPUT -p tcp --dport 631 -s 192.168.1.1/24 -j ACCEPT

#-A INPUT -p tcp --dport 8083 -s 192.168.1.1/24 -j ACCEPT
#-A INPUT -p udp --dport 8083 -s 192.168.1.1/24 -j ACCEPT


#-A INPUT -p tcp --dport 8080 -s 192.168.1.1/24 -j ACCEPT
#-A INPUT -p udp --dport 8080 -s 192.168.1.1/24 -j ACCEPT
-A INPUT -p tcp --dport 80 -s 192.168.1.1/24 -j ACCEPT
#-A INPUT -p udp --dport 80 -s 192.168.1.1/24 -j ACCEPT
-A INPUT -p tcp --dport 80 -s 10.8.0.1/24 -j ACCEPT
#vnc
-A INPUT -p tcp --dport 5900 -s 192.168.1.1/24 -j ACCEPT
#-A INPUT -p udp --dport 5900 -s 192.168.1.1/24 -j ACCEPT
#ssh
#-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp --dport 22 -s 192.168.1.1/24 -j ACCEPT
-A INPUT -p tcp --dport 22 -s 10.8.0.1/24 -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 21 -s 192.168.1.1/24 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8443 -j ACCEPT
#-A INPUT -p udp -m udp --dport 8443 -j ACCEPT
-A INPUT -j DROP
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7
COMMIT
# Completed on Tue Apr  4 19:29:40 2017
